--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,4 @@
 kotlin.code.style=official
 kotlin.js.compiler=ir
 kotlin.js.generate.executable.default=false
+kotlin.incremental.useClasspathSnapshot=true
