--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,6 @@
 [versions]
-kotlin = "1.7.20"
-react = "18.2.0-pre.346"
-emotion = "11.9.3-pre.346"
+kotlin = "1.7.21"
+kotlin-wrappers-bom = "1.0.0-pre.438"
 ktor = "2.1.3"
 kotlinx-serialization-json = "1.4.1"
 kotlinx-coroutines-core = "1.6.4"
@@ -26,16 +25,17 @@ kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-c
 kotlinx-coroutines-core-js = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core-js", version.ref = "kotlinx-coroutines-core" }
 kotlinx-coroutines-core-jvm = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core-jvm", version.ref = "kotlinx-coroutines-core" }
 
-# react
-react = { module = "org.jetbrains.kotlin-wrappers:kotlin-react", version.ref = "react" }
-react-dom = { module = "org.jetbrains.kotlin-wrappers:kotlin-react-dom", version.ref = "react" }
-
-# emotion
-emotion = { module = "org.jetbrains.kotlin-wrappers:kotlin-emotion", version.ref = "emotion" }
+# kotlin wrappers
+kotlin-wrappers-bom = { module = "org.jetbrains.kotlin-wrappers:kotlin-wrappers-bom", version.ref = "kotlin-wrappers-bom" }
+react = { module = "org.jetbrains.kotlin-wrappers:kotlin-react" }
+react-dom = { module = "org.jetbrains.kotlin-wrappers:kotlin-react-dom" }
+emotion = { module = "org.jetbrains.kotlin-wrappers:kotlin-emotion" }
 
 # ktor
 ktor-server-cio = { module = "io.ktor:ktor-server-cio", version.ref = "ktor" }
 ktor-server-core-jvm = { module = "io.ktor:ktor-server-core-jvm", version.ref = "ktor" }
+ktor-server-host-common-jvm = { module = "io.ktor:ktor-server-host-common-jvm", version.ref = "ktor" }
+ktor-server-status-pages-jvm = { module = "io.ktor:ktor-server-status-pages-jvm", version.ref = "ktor" }
 ktor-server-content-negotiation = { module = "io.ktor:ktor-server-content-negotiation-jvm", version.ref = "ktor" }
 ktor-server-cors-jvm = { module = "io.ktor:ktor-server-cors-jvm", version.ref = "ktor" }
 ktor-server-call-logging-jvm = { module = "io.ktor:ktor-server-call-logging-jvm", version.ref = "ktor" }
